made into proper html :D

--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-<a>Hello, world!</a>
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>HI :D</title>
+        <meta charset="utf-8">
+    </head>
+    <body>
+        <p>Hello, World</p>
+    </body>
+</html>
