--- a/index.html
+++ b/index.html
@@ -1,10 +1,28 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>HI :D</title>
+        <title>Sample Website :)</title>
         <meta charset="utf-8">
+        <!--void element or self closing tag, (meta defines the character set)-->
     </head>
     <body>
-        <p>Hello, World</p>
+        <h1>Welcome :D</h1>
+        <p>you've entered the <em>greatest</em> bowl of soup on the internet!
+            Isn't that cool? <strong><em>I hope you enjoy your stay here!</em></strong> hahahahahhahahahhahahhahahhahahahahahahhaha
+        </p>
+        <h2>About:</h2>
+        <h3>Commissions:</h3>
+        <h3>Etsy Shop:</h3>
+        <img src="images/banner.jpg" alt = "shop banner">
+        <!--linked directly on the server :D-->
+        <img src="https://i.etsystatic.com/ishbs/9d8d32/4159375972/ishbs_3360x448.4159375972_qowqe0p6.jpg?version=0" alt=":()">\
+        <!--bad, hotlinked to source website :()-->
+        <a href="https://fishchwder.etsy.com" target="_blank" rel="noopener"><strong>click here :)</strong></a>
+        <!--use the target and rel to make it open in a new tab
+        all the orange things are called attributes-->
+        <a href="https://fishchwder.etsy.com" target="_blank" rel="noopener" style="text-decoration: none;">
+            <img src="images/banner.jpg" size="2">
+        </a>
     </body>
 </html>
+<!--COMMENT LIKE THIS :)-->
