--- a/index.html
+++ b/index.html
@@ -1,28 +1,43 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Sample Website :)</title>
+        <title>fishchwder</title>
         <meta charset="utf-8">
         <!--void element or self closing tag, (meta defines the character set)-->
+        <link rel="stylesheet" href="css/main.css">
+        <!--rel is the relationshpi, i think you can call it anything
+        href is the stylesheet we're referring to-->
     </head>
+
+    <div id="main-nav" class="nav-menu">
+        <a href="index.html" class="nav-spacing">Home</a>
+        <a href="tags.html"class="nav-spacing">Tags</a>
+        <a href="book report sample.html"class="nav-spacing">Book Report</a>
+    </div>
+
     <body>
         <h1>Welcome :D</h1>
         <p>you've entered the <em>greatest</em> bowl of soup on the internet!
             Isn't that cool? <strong><em>I hope you enjoy your stay here!</em></strong> hahahahahhahahahhahahhahahhahahahahahahhaha
-        </p>
+        </p> 
         <h2>About:</h2>
         <h3>Commissions:</h3>
         <h3>Etsy Shop:</h3>
-        <img src="images/banner.jpg" alt = "shop banner">
+        <img src="images/banner.jpg" alt = "shop banner" height="150" style=" margin: 0 auto; display: block;">
         <!--linked directly on the server :D-->
-        <img src="https://i.etsystatic.com/ishbs/9d8d32/4159375972/ishbs_3360x448.4159375972_qowqe0p6.jpg?version=0" alt=":()">\
+        <blockquote style="padding: 2px 20px; background: cadetblue;">
+        <p>hehehehehe</p>
+        </blockquote>
+        <imgvscode-file://vscode-app/c:/Users/jni47/AppData/Local/Programs/Microsoft%20VS%20Code/resources/app/out/vs/code/electron-sandbox/workbench/workbench.html src="https://i.etsystatic.com/ishbs/9d8d32/4159375972/ishbs_3360x448.4159375972_qowqe0p6.jpg?version=0" alt=":()">\
         <!--bad, hotlinked to source website :()-->
         <a href="https://fishchwder.etsy.com" target="_blank" rel="noopener"><strong>click here :)</strong></a>
         <!--use the target and rel to make it open in a new tab
         all the orange things are called attributes-->
         <a href="https://fishchwder.etsy.com" target="_blank" rel="noopener" style="text-decoration: none;">
-            <img src="images/banner.jpg" size="2">
+            <img src="images/banner.jpg">
         </a>
     </body>
+    
+
 </html>
 <!--COMMENT LIKE THIS :)-->
