--- a/tags.html
+++ b/tags.html
@@ -26,9 +26,9 @@
         <h1>Block Elements D:</h1>
         <table>
             <tr>
-                <th>Tag</th>
-                <th>Name</th>
-                <th>Purpose</th>
+                <th style="padding: 0 5px;">Tag</th>
+                <th style="padding: 0 5px;">Name</th>
+                <th style="padding: 0 5px;">Purpose</th>
             </tr>
             <tr>
                 <td><code>h1</code>&ndash;<code>h6</code></td>
@@ -70,6 +70,26 @@
                 <td>unordered list</td>
                 <td>makes a list without numbers</td>
             </tr>
+            <tr>
+                <td><code>li</code></td>
+                <td>list item</td>
+                <td>adds an item on the list</td>
+            </tr>
+            <tr>
+                <td><code>blockquote</code></td>
+                <td>block quotation</td>
+                <td>shows a formatted quotation</td>
+            </tr>
+            <tr>
+                <td><code>br</code></td>
+                <td>break</td>
+                <td>adds a line break</td>
+            </tr>
+            <tr>
+                <td><code>div</code></td>
+                <td>divide</td>
+                <td>"seperates" a block level element to be styled</td>
+            </tr>
         </table>
         <h1>Inline Elements :(</h1>
         <table>
@@ -96,6 +116,23 @@
                 <td>image</td>
                 <td>adds a picture</td>
                 <td><img src="images/astronaut_tagged.jpg" alt="hahahahhaha"</td>
+            </tr>
+            <tr>
+                <td><coded>a</coded></td>
+                <td>anchor</td>
+                <td>makes a hyperlink</td>
+                <td><a href="https://google.ca">google lol</a></td>
+            </tr>
+            <tr>
+                <td><code>code</code></td>
+                <td>code</td>
+                <td>makes it look like source code</td>
+                <td><code>hehehehhehe</code></td>
+            </tr>
+            <tr>
+                <td><code>span</code></td>
+                <td>span</td>
+                <td>"seperates" inline section of text to be styled</td>
             </tr>
         </table>
     </body>
